package eu.h2020_5gtango.vnv.tee.model


class NetworkServiceInstance {

    String networkServiceInstanceId

    String networkServiceId

    Map runtime

}
